Fix margin-left issue that is throwing off alignment

--- a/style.css
+++ b/style.css
@@ -772,6 +772,7 @@ h4.values {
 
 .our-values p {
 	text-align: center;
+	padding: 0 15%;
 }
 
 /**********TUTORIALS PAGE STYLING**********/
@@ -798,6 +799,11 @@ h4.values {
 h4 img {
   max-width: 200px;
 }
+
+.row {
+	margin-left: 0 !important;
+}
+
 
 
 /**********MEDIA QUERIES STYLING**********/
